kubernetes/apps/ecowitt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecowitt-exporter
  labels:
    app: ecowitt-exporter
spec:
  selector:
    app: ecowitt-exporter
  ports:
    - port: 8088
      targetPort: http
      name: http
