kubernetes/apps/ecowitt/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ecowitt-exporter
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ecowitt.mpdavis.com`)
      kind: Rule
      services:
        - name: ecowitt-exporter
          port: 8088
  tls: {}
